--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.18",
+    "three": "^0.181.2",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
