--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -22,10 +24,9 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.18",
     "three": "^0.181.2",
-    "tsparticles-slim": "^2.12.0",
+    "tsparticles": "^3.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
